v0.2.0: Batched protocol, common processing layer, and rate limiting
Overhaul the wire protocol (v5 → v15) and extract shared server logic
into a common processing abstraction layer. Each request now carries a
requestId and clientTimestamp, enabling per-request rate limiting,
up-to-date detection, and cross-player deduplication.

Protocol changes (v5 → v15):
- Replace ChunkRequestC2S (position array) with BatchChunkRequestC2S
  (arrays of requestId + packedPosition + clientTimestamp)
- Replace ChunkSectionS2C with VoxelColumnS2C (requestId + MC-native
  sections + columnTimestamp)
- Consolidate ColumnUpToDateS2C and RequestCompleteS2C into
  BatchResponseS2C (batched response-type + requestId pairs covering
  rate-limited, up-to-date, and not-generated)
- Add BandwidthUpdateC2S for client-reported desired bandwidth
- SessionConfigS2C now carries rate limits, concurrency caps,
  generation toggle, per-player bandwidth limit

Common processing layer (22 new files in common/processing/):
- OffThreadProcessor: main-thread → processing-thread handoff with
  pre-serialized LoadedColumnData
- IncomingRequestRouter: routes by clientTimestamp — sync-on-load path
  (>0 or -1) vs generation path (==0), with DedupTracker for
  cross-player deduplication
- AbstractPlayerRequestState / AbstractChunkDiskReader: base classes
  eliminating duplicated logic between Fabric and Paper
- RateLimiterSet: per-player token-bucket pair (sync + generation)
- ConcurrencyLimiter: per-player in-flight request caps
- SendActionBatcher: per-tick accumulator for batched responses
- ProcessingDiagnostics, TickSnapshot, TickDiagnostics: structured
  diagnostic data for /lsslod diag

Timestamp and dirty column infrastructure:
- Replace RegionTimestampReader with ColumnTimestampCache (in-memory
  per-dimension packedXZ → epochSeconds cache)
- Replace ChunkChangeTracker with DirtyColumnTracker (common/) and
  dedicated broadcasters: DirtyColumnBroadcaster (Fabric),
  PaperDirtyColumnBroadcaster + PaperW